--- a/app.css
+++ b/app.css
@@ -6,21 +6,24 @@
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
 header {
   background-color: #1F2937;
+  padding: 1rem 0 5rem 0;
 }
 
-nav {
+nav.nav-menu {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
 }
 
-nav div.logo {
+nav span.logo-text {
   font-size: 24px;
   font-weight: bold;
   color: #F9FAF8;
@@ -35,6 +38,57 @@ nav ul {
   color: #E5E7EB;
 }
 
+nav .nav-links a {
+  text-decoration: none;
+  color: #E5E7EB;
+}
+
 li.nav-link {
   padding: 4px;
 }
+
+.hero {
+  display: flex;
+  gap: 30px;
+  align-items: stretch;
+  padding: 5rem 0;
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1;
+  gap: 8px;
+}
+
+.hero .hero-main-text {
+  font-size: 48px;
+  font-weight: 900;
+  color: #F9FAF8;
+}
+
+.hero-secondary-text {
+  font-size: 18px;
+  color: #E5E7EB;
+}
+
+.hero-image {
+  color: #F9FAF8;
+  background-color: #757575;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  flex: 1;
+}
+
+.sign-up-button {
+  color: #F9FAF8;
+  background-color: #3882F6;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 8px 25px;
+  border-radius: 10px;
+}
+
