Create and style information section

--- a/app.css
+++ b/app.css
@@ -92,3 +92,35 @@ li.nav-link {
   border-radius: 10px;
 }
 
+.info-header-text {
+  font-size: 36px;
+  font-weight: 900;
+  color: #1F2937;
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.info-items {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  margin-top: 30px;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 200px;
+  height: 250px;
+  text-align: center;
+}
+
+.box {
+  border: 5px solid #3882F6;
+  border-radius: 12px;
+  width: 200px;
+  height: 250px;
+}
