--- a/app.css
+++ b/app.css
@@ -186,3 +186,10 @@ li.nav-link {
   text-decoration: none;
   font-weight: 600;
 }
+
+footer {
+  text-align: center;
+  background-color: #1F2937;
+  padding: 40px;
+  color: #F9FAF8;
+}
